--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,6 +5,9 @@
       "@semantic-release/commit-analyzer",
       {
         "releaseRules": [
+          { "breaking": true, "release": "major" },
+          { "type": "feat", "release": "minor" },
+          { "type": "fix", "release": "patch" },
           { "type": "refactor", "release": "patch" },
           { "type": "perf", "release": "patch" },
           { "type": "chore", "scope": "deps", "release": "patch" }
