--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: native-binding-${{ matrix.target }}
-          path: dist/napi/*.node
+          path: dist/napi/
           if-no-files-found: error
 
   release:
