--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,6 +111,9 @@ jobs:
       - name: Run Rust tests
         run: cargo test
 
+      - name: Verify build output
+        run: ls -laR dist/
+
       - name: Run JavaScript tests
         run: bun test
 
