--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ path = "src/parser/lib.rs"
 
 [dependencies]
 napi = { version = "=3.8.2", features = ["serde-json"] }
-napi-derive = "=3.5.1"
+napi-derive = { version = "=3.5.1", features = ["type-def"] }
 serde = { version = "=1.0.228", features = ["derive"] }
 serde_json = "=1.0.149"
 htmlescape = "=0.3.1"
