--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
             --target "${{ matrix.target }}" ${{ matrix.extra-args }}
         env:
           MACOSX_DEPLOYMENT_TARGET: '10.13'
+          TARGET_CFLAGS: '-std=gnu11'
 
       - name: Upload native binding
         uses: actions/upload-artifact@v4
